# gtfspb_2_mfjson

./: .buildinfo  .env.datadog.example  .env.example  .env.open  .gitignore  .pre-commit-config.yaml  docker-compose.override.yml  docker-compose.yml  dockerfile  entrypoint.sh  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  test.ipynb
.doctrees/: environment.pickle  index.doctree
.github/workflows/: build.yml  deploy.yml  documentation.yml  lint.yml  scheduled-deploy.yml  test.yml
code/: feed.json  main.py
code/helpers/: Entity.py  TrajectoryAggregator.py  VehiclePositionFeed.py  helpers.py  s3Uploader.py  setup_logger.py
code/scripts/: aggregate_trajectories.py
datadog/dashboards/: aggregation_storage.json  data_quality_scorecard.json  entity_lifecycle.json  feed_health_overview.json  import_dashboards.sh
notebooks/: authenticated_feeds.csv  load_to_mobilitydb.ipynb  mobilitydatabase.ipynb  pymeos.ipynb  test.ipynb
sample_mf_json/: 29810f3b-6693-47ed-8e0d-b732009dbced.mfjson  ab6bd2e7-ce67-4b49-a6ee-b9528b9a879c.mfjson
scripts/: aggregate_trajectories.py
src/: main.py
template/: .env.caltrain  .env.cats_charlotte_nc  .env.ct_transit  .env.cta  .env.denver_rtd  .env.king_county_metro  .env.marta_bus  .env.mbta  .env.mta  .env.nashvillemta  .env.pvta  .env.ripta  .env.septa_bus  .env.septa_rail  .env.stm_montreal  .env.toronto_ttc  .env.wmata_bus  .env.wmata_rail
tests/: __init__.py  conftest.py  test_config.py  test_entity.py  test_s3_uploader.py  test_vehicle_position_feed.py
(+12 files in other folders)
